--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,26 @@
 		{
 			"matches": ["*://*.facebook.com/*"],
 			"js": ["js/jquery.js", "js/content.js"]
-		}
+		},
+    {
+      "matches": ["*://www.mediafire.com/file/*/*"],
+      "js": ["js/jquery.js", "js/mediafire.js"]
+    },
+    {
+      "matches": ["*://sinhvienit.net/*"],
+      "js": ["js/jquery.js", "js/sinhvienit.js"]
+    },
+    {
+      "matches": ["*://ouo.io/go/*"],
+      "js": ["js/jquery.js", "js/ouo_io.js"]
+    },
+    {
+      "matches": ["*://anlink.top/*"],
+      "js": ["js/jquery.js", "js/anlink.js"]
+    },
+    {
+      "matches": ["*://daotao.dut.udn.vn/sv/*"],
+      "js": ["js/jquery.js", "js/daotao.js"]
+    }
 	]
 }
