--- a/manifest.json
+++ b/manifest.json
@@ -30,6 +30,10 @@
         "js": ["js/jquery.js", "js/facebook.js"],
         "css": ["css/fab-button.css"]
     }, {
+        "matches": ["*://*.youtube.com/*"],
+        "js": ["js/jquery.js", "js/youtube.js"],
+        "css": ["css/youtube.css"]
+    }, {
         "matches": ["*://www.mediafire.com/file/*/*"],
         "js": ["js/jquery.js", "js/mediafire.js"]
     }, {
@@ -53,7 +57,7 @@
         "js": ["js/jquery.js", "js/phimmoi.js"]
     }, {
         "matches": ["*://chiasenhac.vn/*"],
-        "js": ["js/chiasenhac.js"]
+        "js": ["js/jquery.js", "js/chiasenhac.js"]
     }, {
         "matches": ["*://id.zing.vn/v2/register/*"],
         "js": ["js/zing.js"]
