--- a/manifest.json
+++ b/manifest.json
@@ -61,6 +61,7 @@
         "js": ["js/jquery.js", "js/phimmoi.js"]
     }, {
         "matches": ["*://linkneverdie.com/*"],
+        "js": ["js/jquery.js", "js/linknerverdie.js"],
         "css": ["css/linkneverdie.css"]
     }],
 
