Dont show ad_frame pause

--- a/manifest.json
+++ b/manifest.json
@@ -121,6 +121,9 @@
             "js": [
                 "js/jquery.js",
                 "js/phimmoi.js"
+            ],
+            "css":[
+                "css/phimmoi.css"
             ]
         },
         {
