--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-clean": "^0.4.0",
-    "gulp-clean-css": "^3.9.3",
-    "gulp-cleanhtml": "^1.0.3",
-    "gulp-minify": "^2.1.0",
-    "gulp-zip": "^4.1.0"
-  }
+    "name": "Utils",
+    "version": "2.0.0",
+    "author": "Anh Hồng",
+    "scripts": {
+        "gulp": "gulp"
+    },
+    "devDependencies": {
+        "gulp": "^3.9.1",
+        "gulp-clean": "^0.4.0",
+        "gulp-clean-css": "^3.9.3",
+        "gulp-cleanhtml": "^1.0.3",
+        "gulp-minify": "^2.1.0",
+        "gulp-zip": "^4.1.0"
+    }
 }
