--- a/src/manifest.json
+++ b/src/manifest.json
@@ -164,5 +164,6 @@
         "contextMenus",
         "tabs",
         "*://*/*"
-    ]
+    ],
+    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
