--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "gulp": "gulp"
     },
     "devDependencies": {
+        "eslint": "^4.19.1",
         "gulp": "^3.9.1",
         "gulp-clean": "^0.4.0",
         "gulp-clean-css": "^3.9.3",
