--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
         "gulp": "gulp"
     },
     "devDependencies": {
-        "eslint": "^4.19.1",
         "gulp": "^3.9.1",
         "gulp-clean": "^0.4.0",
         "gulp-clean-css": "^3.9.3",
         "gulp-cleanhtml": "^1.0.3",
-        "gulp-jshint": "^2.1.0",
+        "gulp-eslint": "^4.0.2",
         "gulp-minify": "^2.1.0",
         "gulp-zip": "^4.1.0",
         "jshint": "^2.9.5",
